RESOLVED FIXED111968
[V8] Fix V8InjectedScriptManager::canAccessInspectedWindow
https://bugs.webkit.org/show_bug.cgi?id=111968
Summary [V8] Fix V8InjectedScriptManager::canAccessInspectedWindow
Marja Hölttä
Reported 2013-03-11 03:18:12 PDT
This fix is needed to make the tests which are failing in bug 111724 pass. Failing tests: inspector/extensions/extensions-eval-content-script.html inspector/extensions/extensions-audits-content-script.html
Attachments
Patch (1.75 KB, patch)
2013-03-11 03:20 PDT, Marja Hölttä
no flags
Marja Hölttä
Comment 1 2013-03-11 03:20:54 PDT
Kentaro Hara
Comment 2 2013-03-11 03:22:05 PDT
Comment on attachment 192432 [details] Patch Looks reasonable.
WebKit Review Bot
Comment 3 2013-03-11 03:46:44 PDT
Comment on attachment 192432 [details] Patch Clearing flags on attachment: 192432 Committed r145353: <http://trac.webkit.org/changeset/145353>
WebKit Review Bot
Comment 4 2013-03-11 03:46:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.