[V8] Fix V8InjectedScriptManager https://bugs.webkit.org/show_bug.cgi?id=111968

Patch by Marja Hölttä <marja@chromium.org> on 2013-03-11
Reviewed by Kentaro Hara.

This is needed to make the inspector work after templates for main world
and non-main worlds are separated (bug 111724).

No new tests (no changes in functionality).

* bindings/v8/custom/V8InjectedScriptManager.cpp:
(WebCore::InjectedScriptManager::canAccessInspectedWindow):

Canonical link: https://commits.webkit.org/130313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145353 268f45cc-cd09-0410-ab3c-d52691b4dbfc